# proxide

./: .gitignore  README.md  check_failures.py  priox.code-workspace  pyproject.toml  reproduce_crash.py  validate_rust_parser.py
.agents/: ATOMIC_SYSTEM_ARCHITECTURE.md  COMPLETE_RUST_PORT.md  PYTHON_REMOVAL_OXIDIZE_REPLACEMENT.md  README.md  ROADMAP.md  RUST_PORTING_PLAN.md  TECHNICAL_DEBT.md  VALIDATION_ROADMAP.md
.agents/archive/: 121211.md  FORCEFIELD_PARSING.md  PHASE5_MIGRATION.md  TRAJECTORY_PARSER_IMPLEMENTATION.md
.agents/tasks/: phase7_handoff.md  restore_lib_rs.md
.agents/workflows/: rust_extension_walkthrough.md
.github/workflows/: ci.yml  trajectory_parity.yml
benchmarks/: benchmark_rust_vs_python.py  benchmark_rust_vs_python_v2.py
docs/: index.md
docs/source/: conf.py  gaff_integration.rst  index.rst
docs/source/api/: modules.rst  proxide.assets.rst  proxide.chem.conversion.rst  proxide.chem.ordering.rst  proxide.chem.residues.rst  proxide.chem.rst  proxide.core.atomic_system.rst  proxide.core.containers.rst  proxide.core.rst  proxide.core.types.rst  proxide.geometry.alignment.rst  proxide.geometry.metrics.rst  proxide.geometry.radial_basis.rst  proxide.geometry.rst  proxide.geometry.transforms.rst  proxide.io.parsing.coords.rst  proxide.io.parsing.dispatch.rst  proxide.io.parsing.foldcomp.rst  proxide.io.parsing.mappings.rst  proxide.io.parsing.mdtraj.rst  proxide.io.parsing.molecule.rst  proxide.io.parsing.pqr.rst  proxide.io.parsing.registry.rst  proxide.io.parsing.rst  proxide.io.parsing.rust.rst  proxide.io.parsing.structures.rst  proxide.io.parsing.types.rst  proxide.io.parsing.utils.rst  proxide.io.rst  proxide.io.streaming.array_record.rst  proxide.io.streaming.mdcath.rst  proxide.io.streaming.rst  proxide.md.rst  proxide.ops.dataset.rst  proxide.ops.prefetch.rst  proxide.ops.processing.rst  proxide.ops.rst  proxide.ops.transforms.rst  proxide.physics.constants.rst  proxide.physics.electrostatics.rst  (+8 more)
oxidize/: Cargo.toml  README.md  check_output.txt  oxidize.pyi  pyproject.toml
oxidize/proto/: fragments.proto
oxidize/src/: lib.rs  py_chemistry.rs  py_forcefield.rs  py_hdf5.rs  py_parsers.rs  py_trajectory.rs  spec.rs
oxidize/src/chem/: masses.rs  mod.rs  residues.rs
oxidize/src/forcefield/: exclusions.rs  gaff.rs  gaff_generator.rs  topology.rs  types.rs
oxidize/src/formats/: dcd.rs  foldcomp.rs  mdtraj_h5.rs  mmcif.rs  mod.rs  pdb.rs  trr.rs  xdr.rs  xtc.rs
oxidize/src/formats/foldcomp/: db.rs
oxidize/src/formatters/: atom14.rs  atom37.rs  backbone.rs  cache.rs  custom.rs  full.rs
oxidize/src/geometry/: alignment.rs  cell_list.rs  distances.rs  fragment_library.rs  hydrogens.rs  mod.rs  neighbors.rs  radial_basis.rs  relax.rs  solvent.rs  topology.rs
oxidize/src/io/: fetching.rs
oxidize/src/physics/: cmap.rs  constants.rs  electrostatics.rs  frame.rs  md_params.rs  mod.rs  nerf.rs  vdw.rs  water.rs
oxidize/src/processing/: mod.rs  models.rs  noising.rs  projection.rs  residues.rs
oxidize/src/structure/: systems.rs
rust_ext/: Cargo.toml  pyproject.toml
rust_ext/src/: lib.rs
rust_ext/src/chem/: bonds.rs  mod.rs  residues.rs
rust_ext/src/forcefield/: mod.rs  topology.rs  xml_parser.rs
rust_ext/src/formats/: mdcath_h5.rs  mmcif.rs  mod.rs  pdb.rs  pqr.rs  xtc.rs
rust_ext/src/formatters/: cache.rs  custom.rs  full.rs  mod.rs
rust_ext/src/geometry/: angles.rs  cell_list.rs  neighbors.rs  radial_basis.rs  transforms.rs
rust_ext/src/physics/: constants.rs  gbsa.rs  md_params.rs  mod.rs
rust_ext/src/structure/: mod.rs  systems.rs
rust_ext/tests/fixtures/: test.cif
scripts/: check_failures.py  convert_fragments.py  coverage.json  create_dummy_fragments.py  debug_parsing.py  fetch_test_data.py  generate_hydride_data.py  generate_trajectory_test_data.py  sync_forcefields.py  validate_rust_parser.py  verify_gaff.py  verify_gaff_integration.py  verify_rust_parser.py  verify_structural_data.py
src/priox/chem/: ordering.py
src/priox/core/: atomic_system.py  containers.py
src/priox/md/: __init__.py  jax_md_bridge.py
src/priox/ops/: dataset.py  processing.py  transforms.py
src/priox/physics/: constants.py  electrostatics.py  features.py  force_fields.py  vdw.py
src/proxide/: __init__.py  types.py
src/proxide/assets/: README.md  __init__.py
src/proxide/chem/: __init__.py  conversion.py  ordering.py  properties.py  residues.py
src/proxide/core/: __init__.py  atomic_system.py  containers.py  projector.py  types.py
src/proxide/geometry/: __init__.py  alignment.py  metrics.py  radial_basis.py  transforms.py
src/proxide/io/: __init__.py  fetching.py
src/proxide/md/: __init__.py
src/proxide/ops/: __init__.py  dataset.py  prefetch.py  processing.py  transforms.py
src/proxide/physics/: __init__.py  electrostatics.py  features.py  projections.py  vdw.py
tests/: conftest.py  repro_issues.py  test_geometry_integration.py  test_md_parameterization.py
tests/assets/: test_forcefields.py  test_gaff_parity.py  test_load_all_forcefields.py
tests/chem/: test_conversion.py  test_residues.py
tests/core/: test_atomic_system.py  test_atomic_system_openmm_export.py  test_containers.py
tests/data/trajectories/: test.dcd  test.h5  test.trr  test.xtc
tests/geometry/: test_alignment.py  test_metrics.py  test_radial_basis.py  test_transforms.py
tests/io/: test_fetching.py  test_formatting.py
tests/io/parsing/: benzene.mol2  conftest.py  test_biotite.py  test_biotite_extended.py  test_coords.py  test_dispatch.py  (+12 more)
tests/md/: test_jax_md_bridge.py  test_jax_md_bridge_extended.py
tests/ops/: test_prefetch.py  test_processing.py  test_processing_transforms.py  test_transforms_extended.py
tests/physics/: conftest.py  test_electrostatics.py  test_features.py  test_features_extended.py  test_projections.py  test_vdw.py
tests/validation/: test_energy_relaxation.py  test_force_projection_parity.py  test_hydrogen_parity.py  test_openmm_roundtrip.py  test_parameterization_parity.py  test_physics_parity.py  test_structure_parity.py  test_terminals.py  test_topology_generation.py  test_trajectory_parity.py
(+177 files in other folders)
