[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxide"
version = "0.1.0"
description = "Protein I/O for JAX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "numpy",
    "biotite",
    "mdtraj",
    "array_record",
    "chex",
    "rdkit",
    "hydride",
    "grain",
    "jax-md",
    "h5py",
    "foldcomp",
    "msgpack",
    "msgpack-numpy",
    "equinox",
    "jaxtyping",
    "tables",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"proxide" = ["chem/alphafold/common/stereo_chemical_props.txt"]

[project.optional-dependencies]
ml = [
    "huggingface_hub",
    "optax",
]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ty",
    "sphinx",
    "sphinx-book-theme",
    "myst-nb",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinxext-rediraffe",
]

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests as smoke tests (fast and critical)",
]

[tool.ruff]
line-length = 100
fix = true
indent-width = 2
force-exclude = true
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "tests",
    "*.ipynb",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PD", "D203", "D213"]
pylint.max-args = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "T201", "ANN201", "INP001", "PLC0415", "SLF001", "PLR2004", "ANN001", "D100", "D101", "D102", "D103"]

[dependency-groups]
dev = [
    "maturin>=1.10.2",
]

