[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "proxide"
version = "0.1.0"
description = "Protein I/O for JAX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "numpy",
    "biotite",
    "hydride",
    "mdtraj",
    "array_record",
    "chex",
    "rdkit",
    "grain",
    "jax-md",
    "h5py",
    "foldcomp",
    "msgpack",
    "msgpack-numpy",
    "equinox",
    "jaxtyping",
    "tables",
]

[project.optional-dependencies]
ml = [
    "huggingface_hub",
    "optax",
]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ty",
    "sphinx",
    "sphinx-book-theme",
    "myst-nb",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinxext-rediraffe",
    "maturin",
    "hydride",
    "openmm",
]

[tool.maturin]
# Path to the Rust crate
manifest-path = "oxidize/Cargo.toml"
# Python source directory
python-source = "src"
# The compiled Rust module name (import proxide._oxidize)
module-name = "proxide._oxidize"
# Include Python package files
include = [
    "src/proxide/**/*",
]

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests as smoke tests (fast and critical)",
]

[tool.ruff]
line-length = 100
fix = true
indent-width = 2
force-exclude = true
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "tests",
    "*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["PD", "D203", "D213"]
pylint.max-args = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "T201", "ANN201", "INP001", "PLC0415", "SLF001", "PLR2004", "ANN001", "D100", "D101", "D102", "D103"]
"tests/ops/test_processing.py" = ["E117", "S101", "T201", "ANN201", "INP001", "PLC0415", "SLF001", "PLR2004", "ANN001", "D100", "D101", "D102", "D103"]

[tool.ty]
# Ignore missing stubs for these libraries
[tool.ty.environment]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
# ignored-modules = ["biotite", "openmm", "rdkit", "hydride", "mdtraj", "h5py", "jax_md", "grain", "foldcomp", "openmmforcefields", "openff.toolkit", "proxide_rs"]
