[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "proxide"
version = "0.1.0"
description = "Protein I/O for JAX with high-performance Rust backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "numpy",
    "hydride",
    "grain",
    "jax-md",
    "msgpack",
    "msgpack-numpy",
    "equinox",
    "jaxtyping",
    "array_record",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]"]
tpu = ["jax[tpu]"]
cpu = ["jax"]
ml = [
    "huggingface_hub",
    "optax",
]
molecules = [
    "rdkit",
    # "openff-toolkit", # TODO: Fix resolution on Python 3.13/Linux
]
trajectories = [
    "mdtraj",
    "h5py",
    "biotite",
    "tables",
]
foldcomp = [
    "foldcomp",
]
openmm = [
    "openmm",
    # "openmmforcefields", # TODO: Fix resolution
]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ty",
    "chex",
    "sphinx",
    "sphinx-book-theme",
    "myst-nb",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinxext-rediraffe",
    "maturin",
]

[tool.maturin]
# Path to the Rust crate
manifest-path = "oxidize/Cargo.toml"
# Python source directory
python-source = "src"
# The compiled Rust module name (import proxide._oxidize)
module-name = "proxide._oxidize"
# Include Python package files
include = [
    "src/proxide/**/*",
]

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests as smoke tests (fast and critical)",
]

[tool.ruff]
line-length = 100
fix = true
indent-width = 2
force-exclude = true
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "tests",
    "*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["PD", "D203", "D213"]
pylint.max-args = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "T201", "ANN201", "INP001", "PLC0415", "SLF001", "PLR2004", "ANN001", "D100", "D101", "D102", "D103"]
"tests/ops/test_processing.py" = ["E117", "S101", "T201", "ANN201", "INP001", "PLC0415", "SLF001", "PLR2004", "ANN001", "D100", "D101", "D102", "D103"]

[tool.ty.environment]
root = ["src/proxide"]

[tool.ty.rules]
invalid-type-form = "ignore"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "chex",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
