[package]
name = "oxidize"
version = "0.1.0"
edition = "2021"
authors = ["Proxide Contributors"]
description = "High-performance Rust parsing extension for protein structures"
license = "MIT"

[lib]
name = "_oxidize"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
numpy = "0.22"

# Parsing utilities
nom = "7.1"
quick-xml = "0.31"

# Compression and I/O
flate2 = "1.0"
memmap2 = "0.9"

# Parallelism
rayon = "1.10"

# Logging
log = "0.4"
pyo3-log = "0.11"

# Error handling
thiserror = "1.0"

# Lazy initialization for global cache
lazy_static = "1.4"

# Thread-safe cell for eager initialization (avoids GIL deadlock)
once_cell = "1.19"

# Linear algebra for Kabsch SVD
nalgebra = "0.33"

# Pure Rust XTC reader (no C++ deps)
molly = "0.4.0"

# HDF5 support (optional, for mdCATH)
# Using hdf5-metno fork which supports HDF5 1.14+
hdf5 = { package = "hdf5-metno", version = "0.11", optional = true }

[features]
default = ["xtc", "mdcath"]
# XTC support using molly (pure Rust)
xtc = []
# mdCATH support using HDF5
mdcath = ["hdf5"]
# Aggregated features
full = ["xtc", "mdcath"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
