[build-system]
# NOTE: This file is required for maturin compatibility in a subdirectory.
# The primary build configuration is located in the parent directory (proxide/pyproject.toml).
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "oxidize"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
